@@ -77,10 +77,5 @@
         <tbody></tbody>
       </table>
     </div>
-
-    <hr>
-    <div><textarea id="area" value=""></textarea></div>
-    <div><button id="send">send</button><button id="send-to-all">send to all</button></div>
-    <div><textarea id="result" value=""></textarea><div>
   </body>
 </html>
