@@ -1,7 +1,11 @@
 2017-09-13  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Remove test code.
+
 	* tryXpath/popup/popup.html:
 	Add results area.
+	Remove test element.
 
 	* tryXpath/popup/popup.js:
 	Modify the file to handle results area.
